...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/play_chart_padding"
            android:visibility="gone"/>

        <com.db.chart.view.StackBarChartView
            android:id="@+id/sandbox_chart_stacked"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/play_chart_padding"
            android:visibility="gone"/>

        <com.db.chart.view.HorizontalStackBarChartView
...
    <RelativeLayout
        android:id="@+id/sandbox_play_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <ImageButton
            android:id="@+id/sandbox_play_play"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="15dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_play"
            android:background="@drawable/play_btn"
...
